// Copyright 2019 The MediaPipe Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package mediapipe.autoflip;

// Options for the VisualScorer module.
// Next tag: 6
message VisualScorerOptions {
  // Weights for the various cues. A larger weight means that the corresponding
  // cue will be of higher importance when generating the combined score.
  optional float area_weight = 1 [default = 1.0];
  // Sharpness is not yet implemented.
  optional float sharpness_weight = 2 [default = 0.0];
  optional float colorfulness_weight = 3 [default = 0.0];
}
